# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atmpd-tools"
version = "0.0.1"
description = "Tools for ATMPD data analysis"
readme = "README.md"
authors = [{ name = "Skyler Tan", email = "shiuhtan123@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha"
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "pandas == 1.5.3",
    "geopandas == 0.12.2",
    "shapely == 2.0.1"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/realpython/reader"