# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atm_datatools"
version = "0.0.1"
description = "Tools for air traffic data analysis"
readme = "README.md"
authors = [{ name = "Skyler Tan", email = "shiuhtan123@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha"
]
keywords = ["air", "traffic", "management", "ADSB", "ADS-B"]
dependencies = [
    "pandas >= 1.5.3",
    "geopandas >= 0.12.2",
    "shapely >= 2.0.1"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/skulu/ATM-datatools"